--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/wingsuit-designsystem/"
   },
   "engines": {
-    "node": ">=16.14.0",
+    "node": ">=18.0.0",
     "yarn": ">=1.3.2"
   },
   "repository": {
@@ -38,8 +38,8 @@
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/addon-styling": "^1.3.6",
     "@storybook/addon-links": "^7.0.2",
-    "@storybook/addon-postcss": "^3.0.0-alpha.1",
     "@storybook/addons": "^7.0.2",
     "@storybook/builder-webpack5": "^7.0.2",
     "@storybook/linter-config": "^3.1.2",
