fix: Use camelCase to ensure js confrom pattern names.

--- a/examples/official-wingsuit/source/default/patterns/components/404-numeric/404-numeric.wingsuit.yml
+++ b/examples/official-wingsuit/source/default/patterns/components/404-numeric/404-numeric.wingsuit.yml
@@ -1,4 +1,4 @@
-404_numeric:
+404-numeric:
   use: "@components/404-numeric/404-numeric.twig"
   label: Numeric Test
   description: Patterns start with nummeric
