--- a/presets/pattern/package.json
+++ b/presets/pattern/package.json
@@ -37,6 +37,7 @@
     "@wingsuit-designsystem/core": "2.0.0-alpha.10",
     "@wingsuit-designsystem/pattern": "2.0.0-alpha.10",
     "glob": "^8.1.0",
+    "lodash": "^4.17.21",
     "loader-utils": "^2.0.0",
     "yaml": "^1.10.2"
   }
