--- a/starter-kits/vanilla-tailwind/package.json
+++ b/starter-kits/vanilla-tailwind/package.json
@@ -36,19 +36,22 @@
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.2",
     "@storybook/addon-links": "^7.0.2",
-    "@storybook/addon-postcss": "^3.0.0-alpha.1",
+    "@storybook/addon-styling": "^1.3.6",
     "@storybook/addons": "^7.0.2",
     "@storybook/builder-webpack5": "^7.0.2",
     "@storybook/linter-config": "^3.1.2",
     "@storybook/react": "^7.0.2",
     "@storybook/react-webpack5": "^7.0.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.0",
     "@wingsuit-designsystem/cli": "2.0.0-alpha.11",
     "@wingsuit-designsystem/core": "2.0.0-alpha.11",
     "@wingsuit-designsystem/pattern-react": "2.0.0-alpha.11",
+    "@wingsuit-designsystem/preset-drupal": "2.0.0-alpha.11",
     "@wingsuit-designsystem/preset-icon": "2.0.0-alpha.11",
     "@wingsuit-designsystem/preset-icon-spritemap": "2.0.0-alpha.11",
+    "@wingsuit-designsystem/preset-imagemin": "2.0.0-alpha.11",
     "@wingsuit-designsystem/preset-lint": "2.0.0-alpha.11",
-    "@wingsuit-designsystem/preset-pattern": "2.0.0-alpha.11",
     "@wingsuit-designsystem/preset-placeholder": "2.0.0-alpha.11",
     "@wingsuit-designsystem/preset-storybook": "2.0.0-alpha.11",
     "@wingsuit-designsystem/preset-tailwind": "2.0.0-alpha.11",
@@ -56,9 +59,11 @@
     "@wingsuit-designsystem/storybook": "2.0.0-alpha.11",
     "autoprefixer": "^9.7.4",
     "postcss": "^8.4.23",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "storybook": "^7.0.2"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "storybook": "^7.0.2",
+    "core-js": "^3.32.1",
+    "storybook-addon-theme-provider": "^0.1.10"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
