feat: Add stories callback for global stories

--- a/presets/placeholder/patterns/placeholder.wingsuit.yml
+++ b/presets/placeholder/patterns/placeholder.wingsuit.yml
@@ -1,6 +1,7 @@
 placeholder:
   use: "@ws-placeholder/placeholder.twig"
   label: Placeholder
+  namespace: wingsuit
   description: "Placeholder image component."
   variants:
     image:
