--- a/starter-kits/tailwind/source/default/patterns/01-atoms/rich-text/rich-text.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/rich-text/rich-text.wingsuit.yml
@@ -112,3 +112,8 @@ rich_text:
           </tbody>
         </table>
 
+  libraries:
+    - pattern_rich_text:
+        css:
+          component:
+            ../rich-text.css: {}
