--- a/starter-kits/tailwind/source/default/tokens/composite/colors/colors.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/tokens/composite/colors/colors.wingsuit.yml
@@ -2,7 +2,7 @@ tokens_colors:
   use: ""
   label: Tokens colors
   settings:
-    bg:
+    bg_color:
       type: colorwidget
       label: Background color
       default_value: ""
