--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -158,9 +158,11 @@ menu:
                 title: Imprint
                 url: '#'
       configuration:
-        "parent_list_classes": ""
-        "parent_list_item_classes": ""
-        "parent_link_classes": "font-bold font-display dark:text-white text-lg font-sans"
-        "child_list_classes": ""
-        "child_list_item_classes": ""
-        "child_link_classes": "dark:text-white text-base font-serif hover:underline"
+        footer:
+          classes:
+            "first_ul": ""
+            "first_li": ""
+            "first_a": "font-bold font-display dark:text-white text-lg font-sans"
+            "descendant_ul": ""
+            "descendant_li": ""
+            "descendant_a": "dark:text-white hover:underline"
