--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingsuit-docs",
-  "version": "0.1.0",
+  "version": "2.0.0-beta.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,31 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@wingsuit-designsystem/pattern": "2.0.0-alpha.12",
-    "@wingsuit-designsystem/core": "2.0.0-alpha.12",
-    "eslint-import-resolver-webpack": "^0.13.7",
-    "@types/node": "20.5.8",
-    "swr": "^2.2.2",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-tabs": "^6.0.2",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.19",
     "@ryangjchandler/spruce": "^2.6.3",
     "@tailwindcss/forms": "^0.5.1",
     "@tailwindcss/typography": "^0.5.1",
+    "@types/node": "20.5.8",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "@wingsuit-designsystem/core": "2.0.0-beta.0",
+    "@wingsuit-designsystem/pattern": "2.0.0-beta.0",
     "alpinejs": "2.7.0",
-    "prismjs": "1.29.0",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "eslint-import-resolver-webpack": "^0.13.7",
     "html-react-parser": "^4.2.2",
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.4.19"
+    "next": "13.4.19",
+    "postcss": "8.4.29",
+    "prismjs": "1.29.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-tabs": "^6.0.2",
+    "swr": "^2.2.2",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   }
 }
