--- a/lerna.json
+++ b/lerna.json
@@ -9,7 +9,7 @@
     "starter-kits/*"
   ],
   "useWorkspaces": true,
-  "version": "2.0.0-alpha.12",
+  "version": "2.0.0-beta.0",
   "registry": "https://registry.npmjs.org",
   "useNx": true,
   "npmClient": "yarn"
