--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/core",
-  "version": "2.0.0-alpha.12",
+  "version": "2.0.0-beta.0",
   "description": "Wingsuit Core Design System.",
   "repository": {
     "type": "git",
