--- a/packages/pattern/package.json
+++ b/packages/pattern/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/pattern",
-  "version": "2.0.0-alpha.12",
+  "version": "2.0.0-beta.0",
   "description": "Wingsuit Patterns.",
   "repository": {
     "type": "git",
