--- a/presets/drupal/package.json
+++ b/presets/drupal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/preset-drupal",
-  "version": "2.0.0-alpha.12",
+  "version": "2.0.0-beta.0",
   "description": "Wingsuit Drupal preset.",
   "repository": {
     "type": "git",
@@ -32,9 +32,9 @@
   },
   "gitHead": "561e222489a6b2fe94efadd6bb8dd31236708425",
   "dependencies": {
-    "@wingsuit-designsystem/core": "2.0.0-alpha.12",
-    "@wingsuit-designsystem/preset-pattern": "2.0.0-alpha.12",
-    "@wingsuit-designsystem/storybook": "2.0.0-alpha.12",
+    "@wingsuit-designsystem/core": "2.0.0-beta.0",
+    "@wingsuit-designsystem/preset-pattern": "2.0.0-beta.0",
+    "@wingsuit-designsystem/storybook": "2.0.0-beta.0",
     "glob": "^8.1.0",
     "path": "^0.12.7",
     "webpack": "^5.56.1"
