--- a/presets/mdx/package.json
+++ b/presets/mdx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/preset-mdx",
-  "version": "2.0.0-alpha.12",
+  "version": "2.0.0-beta.0",
   "description": "Wingsuit Mdx support.",
   "repository": {
     "type": "git",
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
-    "@wingsuit-designsystem/core": "2.0.0-alpha.12",
+    "@wingsuit-designsystem/core": "2.0.0-beta.0",
     "remark-prism": "^1.3.6"
   },
   "scripts": {
