--- a/presets/placeholder/package.json
+++ b/presets/placeholder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/preset-placeholder",
-  "version": "2.0.0-alpha.12",
+  "version": "2.0.0-beta.0",
   "description": "Wingsuit Placeholder preset.",
   "repository": {
     "type": "git",
@@ -36,7 +36,7 @@
   },
   "gitHead": "561e222489a6b2fe94efadd6bb8dd31236708425",
   "dependencies": {
-    "@wingsuit-designsystem/core": "2.0.0-alpha.12",
-    "@wingsuit-designsystem/pattern": "2.0.0-alpha.12"
+    "@wingsuit-designsystem/core": "2.0.0-beta.0",
+    "@wingsuit-designsystem/pattern": "2.0.0-beta.0"
   }
 }
