fix(#58): Footer Mobiel und Desktop anpassen.

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/alert/alert.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/alert/alert.wingsuit.yml
@@ -80,3 +80,7 @@ alert:
       message_color: 'text-blue-600'
       icon: 'circle-info'
       icon_color: 'text-blue-400'
+  settings:
+    buttons:
+      type: boolean
+      label: Buttons
