--- a/starter-kits/tailwind/source/default/patterns/02-molecules/accordion-item/accordion-item.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/accordion-item/accordion-item.wingsuit.yml
@@ -24,7 +24,7 @@ accordion_item:
       wrapper: 'relative border-b border-gray-200'
       inner_wrapper: 'w-full py-6 px-4 text-left cursor-pointer foo'
       label_wrapper: 'flex items-center gap-4 justify-between'
-      label: 'font-bold font-display'
+      label: 'font-bold font-display text-xl'
       icon: 'text-purple-600'
       content_wrapper: 'relative overflow-hidden transition-all max-h-0 duration-700'
       content: 'px-4 lg:pr-16 pb-6 bar'
