fix (#55): Textfields Paddings, Font und Label.

--- a/starter-kits/tailwind/source/default/patterns/00-forms/element/form-element.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/element/form-element.wingsuit.yml
@@ -137,7 +137,7 @@ form_element:
     spacings:
       margin: 'mb-6'
     default_label:
-      classes: 'mb-2'
+      classes: 'mb-[6px]'
     floating_label:
       wrapper: 'floating relative'
       floating: 'floating__label  bg-white flex w-full h-[48px] rounded-md'
