--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/checkbox.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/checkbox.wingsuit.yml
@@ -15,7 +15,7 @@ form_checkbox:
     classes:
       wrapper:
         '
-        form-checkbox
+        form-checkbox mr-3
         bg-form-checkbox-icon-unchecked checked:bg-form-checkbox-icon-checked
         dark:bg-dark-form-checkbox-icon-unchecked dark:checked:bg-dark-form-checkbox-icon-checked
         bg-no-repeat bg-center hover:border-gray-600 checked:rounded-sm checked:border-2 checked:border-transparent checked:overflow-hidden border-2 rounded-sm border-transparent w-[18px] h-[18px]
