--- a/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
@@ -59,7 +59,7 @@ grid:
           configuration: 'gap-5 lg:gap-36.25'
 
     grid_layout:
-      type: value
+      type: textfield
       label: Grid Layout
       description: Use "grid_layout" when you embed grid direct in code.
     grid_layout_1:
