--- a/starter-kits/tailwind/source/default/patterns/04-templates/article/article.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/04-templates/article/article.wingsuit.yml
@@ -40,8 +40,9 @@ article:
             Cambridge friend of mine told me what Occidental is.</p>
 
             <blockquote>
+            <p>
             Quam turpis egestas aliquet ullamcorper tellus. A sed sit morbi augue nulla quam fermentum. Tortor
-            libero placerat curabitur in non viverra.
+            libero placerat curabitur in non viverra. </p>
             </blockquote>
             <div class="text-center text-purple-600">Albert Einstein</div>
 
