chore: Update to sass

--- a/presets/scss/package.json
+++ b/presets/scss/package.json
@@ -30,7 +30,7 @@
     "@wingsuit-designsystem/core": "2.0.0-beta.0",
     "glob": "^9.3.2",
     "mini-css-extract-plugin": "^2.7.5",
-    "node-sass": "^8.0.0",
+    "sass": "^1.72.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss-loader": "^7.1.0",
     "resolve-url-loader": "^5.0.0",
