--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@babel/plugin-proposal-decorators": "^7.23.2",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-export-default-from": "^7.22.17",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
