--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/radio.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/radio.wingsuit.yml
@@ -18,5 +18,5 @@ form_radio:
           form-radio mr-2
           bg-form-radio-icon-unchecked checked:focus:outline-transparent checked:bg-form-radio-icon-checked
           dark:bg-dark-form-radio-icon-unchecked dark:checked:bg-dark-form-radio-icon-checked
-          bg-no-repeat bg-center hover:border-gray-600 border rounded-full border-transparent w-[18px] h-[18px] focus:outline-transparent
+          bg-no-repeat bg-center dark:hover:border-purple-600 hover:border-gray-600 border rounded-full border-transparent w-[18px] h-[18px] focus:outline-transparent
           '
